force-app/main/default/objects/Account/fields/Validacion_Bridger__c.field-meta.xml
<CustomField>
    <fullName>Validacion_Bridger__c</fullName>
    <label>Validación Bridger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BridgerState</valueSetName>
    </valueSet>
</CustomField>