force-app/main/default/objects/Account/fields/Validacion_de_Correo__c.field-meta.xml
<CustomField>
    <fullName>Validacion_de_Correo__c</fullName>
    <description>Validación de correo</description>
    <label>Validación de Correo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Revisar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>