force-app/main/default/objects/Account/fields/Validacion_SVI__c.field-meta.xml
<CustomField>
    <fullName>Validacion_SVI__c</fullName>
    <label>Validación SVI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVI_State</valueSetName>
    </valueSet>
</CustomField>