force-app/main/default/objects/Account/fields/ValorEstimadoPatrimonio__c.field-meta.xml
<CustomField>
    <fullName>ValorEstimadoPatrimonio__c</fullName>
    <label>Valor estimado patrimonio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 a 200 millones</fullName>
            </value>
            <value>
                <fullName>200 a 400 millones</fullName>
            </value>
            <value>
                <fullName>400 a 600 millones</fullName>
            </value>
            <value>
                <fullName>600 a 800 millones</fullName>
            </value>
            <value>
                <fullName>800 a 1000 millones</fullName>
            </value>
            <value>
                <fullName>Más de 1000 millones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>