force-app/main/default/objects/Account/fields/Vida_Grupo__c.field-meta.xml
<CustomField>
    <fullName>Vida_Grupo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vida Grupo</label>
    <type>Checkbox</type>
</CustomField>