force-app/main/default/objects/Account/fields/Vida_Individual__c.field-meta.xml
<CustomField>
    <fullName>Vida_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vida Individual</label>
    <type>Checkbox</type>
</CustomField>