force-app/main/default/objects/Account/fields/Viene_de_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Viene_de_Prospecto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valor que indica si la cuenta viene desde un prospecto</description>
    <label>Viene de Prospecto?</label>
    <type>Checkbox</type>
</CustomField>