force-app/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <description>Formato para incluir la información correspondiente a las cuentas de Persona Jurídicas</description>
    <label>Persona Jurídica</label>
</RecordType>