force-app/main/default/objects/Account/recordTypes/Instituciones_Educativas.recordType-meta.xml
<RecordType>
    <fullName>Instituciones_Educativas</fullName>
    <active>true</active>
    <description>Se registra la Información de las Instituciones Educativas (Colegios y Universidades)</description>
    <label>Instituciones Educativas</label>
</RecordType>