force-app/main/default/objects/Account/recordTypes/Intermediarios.recordType-meta.xml
<RecordType>
    <fullName>Intermediarios</fullName>
    <active>true</active>
    <description>Información de la cuenta que asocia los intermediarios externos de la compañía</description>
    <label>Intermediarios</label>
</RecordType>