force-app/main/default/objects/Account/validationRules/CTA01_Seguros.validationRule-meta.xml
<ValidationRule>
    <fullName>CTA01_Seguros</fullName>
    <active>true</active>
    <description>Si selecciono el campo &quot;Tiene otros seguros&quot; debe especificar &quot;Cuáles&quot;.</description>
    <errorConditionFormula>AND(OtrosSeguros__c = true,  ISBLANK( Cuales__c ))</errorConditionFormula>
    <errorMessage>CTA01 - Si selecciono el campo &quot;Tiene otros seguros&quot; debe especificar &quot;Cuáles&quot;.</errorMessage>
</ValidationRule>