force-app/main/default/objects/Account/validationRules/CTA02_Restringir_crear_cuentas.validationRule-meta.xml
<ValidationRule>
    <fullName>CTA02_Restringir_crear_cuentas</fullName>
    <active>true</active>
    <description>Las cuentas de tipo Instituciones Educativas solamente deberán ser creadas por un usuario con perfil administrdor</description>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &quot;Instituciones_Educativas&quot;, 
NOT( $Profile.Name =&quot;Administrador del sistema 2&quot;)
)</errorConditionFormula>
    <errorMessage>CTA02-Las cuentas de tipo Instituciones Educativas solamente deberán ser creadas por un usuario con perfil administrdor</errorMessage>
</ValidationRule>