force-app/main/default/objects/Account/validationRules/Debe_ingresar_un_numero.validationRule-meta.xml
<ValidationRule>
    <fullName>Debe_ingresar_un_numero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNUMBER(Phone)),NOT( ISBLANK(Phone)),$Profile.Name &lt;&gt; &quot;Administrador del sistema 2&quot;)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Debe ingresar un numero telefónico de contacto sin guiones, puntos u otros signos</errorMessage>
</ValidationRule>