force-app/main/default/objects/Account/validationRules/Debe_ingresar_un_numero_movil.validationRule-meta.xml
<ValidationRule>
    <fullName>Debe_ingresar_un_numero_movil</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK( Celular__c )),NOT( ISNUMBER( Celular__c ) ),$Profile.Name &lt;&gt; &quot;Administrador del sistema 2&quot;)</errorConditionFormula>
    <errorDisplayField>Celular__c</errorDisplayField>
    <errorMessage>Debe ingresar un numero móvil sin signos, puntos u otros signos.</errorMessage>
</ValidationRule>