force-app/main/default/objects/Account/validationRules/Debe_ingresar_un_numero_telefonico.validationRule-meta.xml
<ValidationRule>
    <fullName>Debe_ingresar_un_numero_telefonico</fullName>
    <active>true</active>
    <errorConditionFormula>AND( LEN( Phone ) &lt;&gt;  7 ,NOT( ISBLANK(Phone)),$Profile.Name &lt;&gt; &quot;Administrador del sistema 2&quot;)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>El número telefónico debe ser registrado en su totalidad sin signos (Ej: 2304564).</errorMessage>
</ValidationRule>