force-app/main/default/objects/Account/validationRules/Extension_del_sistema_no_valida.validationRule-meta.xml
<ValidationRule>
    <fullName>Extension_del_sistema_no_valida</fullName>
    <active>true</active>
    <description>El número de documento no es valido por su cantidad de caracteres, si tiene dudas contactese con el Administrador del sistema.</description>
    <errorConditionFormula>AND( LEN( NumeroDocumento__c   )&lt; 4 ,NOT( ISBLANK(NumeroDocumento__c )),$Profile.Name &lt;&gt; &quot;Administrador del sistema 2&quot;)</errorConditionFormula>
    <errorDisplayField>NumeroDocumento__c</errorDisplayField>
    <errorMessage>El número de documento no es valido por su cantidad de caracteres, si tiene dudas contactese con el Administrador del sistema.</errorMessage>
</ValidationRule>