force-app/main/default/objects/Account/validationRules/Restringir_propietario_cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>Restringir_propietario_cuenta</fullName>
    <active>true</active>
    <description>Restringir cambio de propietario para ejecutivos</description>
    <errorConditionFormula>AND(ISCHANGED(OwnerId), OR( $Profile.Name = &apos;Ejecutivo Comercial GS&apos;, $Profile.Name = &apos;Partner Global Seguros&apos;,$Profile.Name = &apos;Partner Global Education&apos;,$Profile.Name = &apos;Director Comercial GS&apos;,$Profile.Name = &apos;Director Comercial GE&apos;,$Profile.Name = &apos;Ejecutivo Comercial GE&apos;))</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>No se permite cambiar los propietarios de las cuentas, por favor contactar al administrador del sistema</errorMessage>
</ValidationRule>