force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NumeroDocumento__c</columns>
    <columns>TipoDocumento__c</columns>
    <columns>PC_PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <label>Mis Cuentas</label>
</ListView>